Code/logs/job_scratchnet_grupo03_28806.err
Traceback (most recent call last):
  File "main.py", line 6, in <module>
    from models.model_builder import Model_builder
  File "/home/grupo03/M5/Code/models/model_builder.py", line 20, in <module>
    from models.networks.classification.ScratchNet import ScratchNet
  File "/home/grupo03/M5/Code/models/networks/classification/ScratchNet.py", line 17
    def forward(self, x):
                        ^
IndentationError: unindent does not match any outer indentation level
